test/conformance/chainsaw/verifyImages/clusterpolicy/standard/noconfigmap-diffimage-success/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-fail
  namespace: mynamespace
spec:
  containers:
  - image: ghcr.io/kyverno/test-verify-image:signed
    name: test-fail
