test/conformance/chainsaw/verifyImages/clusterpolicy/standard/noconfigmap-diffimage-success/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-success
  namespace: mynamespace
spec:
  containers:
  - image: nginx:latest
    name: test-success
