test/conformance/chainsaw/verifyImages/clusterpolicy/standard/noconfigmap-diffimage-success/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mynamespace
