test/conformance/chainsaw/verifyImages/clusterpolicy/standard/noconfigmap-diffimage-success/pod-with-configmap-ready.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-with-configmap
  namespace: mynamespace
spec:
  containers:
  - image: ghcr.io/kyverno/test-verify-image:signed
    name: test-with-configmap
