test/conformance/chainsaw/verifyImages/clusterpolicy/standard/noconfigmap-diffimage-success/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: image-verify-polset
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
