test/conformance/chainsaw/verifyImages/clusterpolicy/standard/noconfigmap-diffimage-success/02-create-good-pod.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: create-good-pod
spec:
  timeouts: {}
  try:
  - apply:
      file: namespace.yaml
  - apply:
      file: good-pod.yaml
  - assert:
      file: good-pod.yaml
