test/conformance/chainsaw/verifyImages/clusterpolicy/standard/noconfigmap-diffimage-success/03-create-bad-pod.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: create-bad-pod
spec:
  timeouts: {}
  try:
  - apply:
      check:
        (error != null): true
      file: bad-pod.yaml
