test/conformance/chainsaw/verifyImages/clusterpolicy/standard/noconfigmap-diffimage-success/04-update-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: update-policy
spec:
  timeouts: {}
  try:
  - apply:
      file: update-policy.yaml
  - assert:
      file: update-policy.yaml
